refactor: 优化背景图片路径设置
- 修改 improved_qss.qss 和 my_custom_style.qss 中的背景图片路径
- 将相对路径从 "../icon/" 修改为直接使用图片文件名
- 更新 .idea/modules.xml 中的模块文件路径

--- a/resources/improved_qss.qss
+++ b/resources/improved_qss.qss
@@ -12,7 +12,7 @@
 
 /* === 主窗口背景设置 === */
 QMainWindow {
-    background-image: url("../icon/yp_juk.jpg"); /* <<<<<<< 在这里修改为你的图片路径！ */
+    background-image: url("yp_juk.jpg"); /* <<<<<<< 在这里修改为你的图片路径！ */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; /* 覆盖整个窗口，保持比例 */
